--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,31 +1,89 @@
 name: Release
+
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - "v*.*.*"
 
 jobs:
-  build:
+  create-release:
+    name: Build and Create Tagged Release
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Install archive tools
+        run: sudo apt install zip
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Checkout source code
+        uses: actions/checkout@v2
         with:
-          node-version: 20
+          fetch-depth: 0
+          ref: ${{ github.event.repository.default_branch }}
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2.2.2
+        with:
+          version: 8.1.1
+
+      - name: Get variables
+        id: get_vars
+        run: |
+          echo "SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          echo "DATE=$(date +'%D')" >> $GITHUB_ENV
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+
+      - name: Setup node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 20.x
+          cache: "pnpm"
+          cache-dependency-path: "web/pnpm-lock.yaml"
 
       - name: Install dependencies
+        run: pnpm i --frozen-lockfile
         working-directory: web
-        run: npm install
 
-      - name: Build Svelte project
+      - name: Run build
+        run: pnpm build
         working-directory: web
-        run: npm run build
+        env:
+          CI: false
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
+      - name: Bump manifest version
+        run: node .github/actions/bump-manifest-version.js
+        env:
+          TGT_RELEASE_VERSION: ${{ github.ref_name }}
+
+      - name: Push manifest change
+        uses: EndBug/add-and-commit@v8
         with:
-          name: svelte-build
-          path: web/build/  # adjust if using SvelteKit (e.g., `.svelte-kit/output`)
+          add: fxmanifest.lua
+          push: true
+          author_name: Manifest Bumper
+          author_email: 41898282+github-actions[bot]@users.noreply.github.com
+          message: "chore: bump manifest version to ${{ github.ref_name }}"
+
+      - name: Update tag ref
+        uses: EndBug/latest-tag@latest
+        with:
+          tag-name: ${{ github.ref_name }}
+
+      - name: Bundle files
+        run: |
+          mkdir -p ./temp/hype_banking/web
+          cp ./{server.lua,README.md,LICENSE,fxmanifest.lua,client.lua,init.lua} ./temp/hype_banking
+          cp -r ./{setup,modules,data,locales} ./temp/hype_banking
+          cp -r ./web/build ./temp/hype_banking/web/build
+          cp -r ./web/images ./temp/hype_banking/web/images
+          cd ./temp && zip -r ../hype_banking.zip ./hype_banking
+
+      - name: Create Release
+        uses: marvinpinto/action-automatic-releases@v1.2.1
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          title: "${{ env.RELEASE_VERSION }}"
+          prerelease: false
+          files: hype_banking.zip
+
+        env:
+          CI: false
