--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          ref: main  # Checkout ke branch main
+          ref: main  # Checkout ke branch main
           
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
@@ -33,7 +35,7 @@ jobs:
           git config --global user.email 'actions@github.com'
           git add -f web/build
           git commit -m "chore: build web for ${{ github.ref_name }}" || echo "No changes to commit"
-          git push
+          git push origin main
           
       - name: Create Release
         uses: softprops/action-gh-release@v1
