--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,8 +62,14 @@ jobs:
           
       - name: Build artifacts
         run: |
-          mkdir -p ./temp/hype_banking/web
+          mkdir -p ./temp/hype_banking
+          cp -r ./bridge ./temp/hype_banking/
+          cp -r ./client ./temp/hype_banking/
+          cp -r ./locales ./temp/hype_banking/
+          cp -r ./server ./temp/hype_banking/
+          cp -r ./shared ./temp/hype_banking/
           cp -r ./web/build ./temp/hype_banking/web/
+          cp ./fxmanifest.lua ./temp/hype_banking/
           cd ./temp && zip -r ../hype_banking.zip ./hype_banking
           
       - name: Update Release
