ci: add directory for web build in release workflow
Ensure the `./temp/hype_banking/web/build` directory is created during the release process to accommodate web build artifacts

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Bundle files
         run: |
           mkdir -p ./temp/hype_banking
+          mkdir -p ./temp/hype_banking/web/build
           cp -r ./bridge ./temp/hype_banking/
           cp -r ./client ./temp/hype_banking/
           cp -r ./locales ./temp/hype_banking/
